# nir2fpga-iscas

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  .scalafmt.conf  CITATION.cff  Dockerfile  LICENSE  README.md  devenv.nix  devenv.yaml  docker-entrypoint.sh  pyrightconfig.json
.devcontainer/: Dockerfile  _nix-daemon.sh  devcontainer-lock.json  devcontainer.json  devenv-prebuild.nix  on-create.sh  post-create.sh  post-start.sh  reset-devenv.sh
.github/workflows/: build-devcontainer.yml
1-discretization-quantization/: .gitignore
1-discretization-quantization/InternalSimulator/: pyproject.toml
1-discretization-quantization/InternalSimulator/InternalSimulator/: CurrentFilter.py  DiscretizationChoices.py  HardwareSimulation.py  HardwareVariables.py  IOManager.py  Integrator.py  NIR2FPGA.py  NetworkTransformation.py  Plotter.py  PredictionType.py  Quantization.py  Recording.py  VCDMapping.py  __init__.py  data.py  fp.py  reports.py
1-discretization-quantization/inputs/: .gitignore
2-compilation/: .scalafmt.conf  CLAUDE.md  build.sbt  build.sc  compile.sh  inputs
2-compilation/project/: plugins.sbt
2-compilation/scripts/: dataset_packets_bridge.py
4-pynq-inference/: inputs
4-pynq-inference/src/: IOManager.py  data.py  evaluate.py  evaluate.sh  nir_accelerator.py  run_evaluations.sh  verify.py
iscas26-tutorial/docs/: primitive-evolution.md  primitive-evolution.org
iscas26-tutorial/mnist/: 1-mnist.py  2-n2f.py
n2f/: compilation.json  input.npy  input_packets.npy  model.json  model.nir  output.npy  quantizations.json  recordings.npy
(+34 files in other folders)
