[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "InternalSimulator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "nir",
    "sinabs",
    "matplotlib",
    "pandas",
    "setvcd",
]

[project.optional-dependencies]
datasets = ["tonic", "spikerplus"]
